# swift-mujoco

./: .bazelrc  .gitignore  .spi.yml  BUILD.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  deps.bzl
.github/workflows/: documentation.yaml  macos-bazel.yaml  macos-spm.yaml  ubuntu-bazel.yaml  ubuntu-spm.yaml
Examples/: BUILD.bazel
Examples/ant/: main.swift
Examples/simulate/: main.swift
Examples/simulate2/: main.swift
Sources/: BUILD.bazel  GLContext.swift  Mj+Functions.swift  Mj.swift  MjArray.swift  MjContact+Extensions.swift  MjContact.swift  MjData+Extensions.swift  MjData+Functions.swift  MjData.swift  MjLROpt+Extensions.swift  MjLROpt.swift  MjModel+Extensions.swift  MjModel+Functions.swift  MjModel.swift  MjNum.swift  MjObject+Extensions.swift  MjObject.swift  MjOption+Extensions.swift  MjOption.swift  MjSolverStat.swift  MjStatistic.swift  MjTimerStat.swift  MjUI+Extensions.swift  MjUI+Functions.swift  MjUI.swift  MjVFS.swift  MjVisual+Extensions.swift  MjVisual.swift  MjWarningStat.swift  Mjcb.swift  MjrContext+Extensions.swift  MjrContext+Functions.swift  MjrContext.swift  MjrRect+Functions.swift  MjrRect.swift  Mjt.swift  MjuiDef+Extensions.swift  MjuiDef.swift  MjuiDefObjectMapper.swift  (+44 more)
Sources/CShim/: CShim.c  CShim.h
Sources/C_glfw/: module.modulemap
Sources/Shim/: _CShim.c  _CShim.h
Sources/codegen/: enumDecl.swift  functionExtension.swift  main.swift  parseHeaders.swift  structExtension.swift
Tests/: BUILD.bazel  main.swift  model.swift  tuple.swift  xml.swift
docs/: index.html  metadata.json
docs/data/documentation/: mujoco.json
docs/data/documentation/mujoco/: aligntocamera(res:vec:forward:).json  clearhandlers().json  error(msg:).json  error_i(msg:i:).json  error_s(msg:text:).json  freelastxml().json  glcontext.json  mj2darray.json  mjarray.json  mjcb.json  mjcontact.json  mjdata.json  mjdatastorage.json  mjdoublebufferpointer.json  mjdoublemutablebufferpointer.json  mjerror.json  mjfloatbufferpointer.json  mjfloatmutablebufferpointer.json  mjint32bufferpointer.json  mjint32mutablebufferpointer.json  mjlropt.json  mjmodel.json  mjmodelstorage.json  mjnamearray.json  mjobject.json  mjoption.json  mjrcontext.json  mjrrect.json  mjsolverstat.json  mjstaticstringarray.json  mjstatistic.json  mjtbias.json  mjtbutton.json  mjtcamera.json  mjtcamlight.json  mjtcatbit.json  mjtcollision.json  mjtcone.json  mjtconstraint.json  mjtconstraintstate.json  (+82 more)
docs/data/documentation/mujoco/glcontext/: appendevent(_:).json  clearcallbacks().json  clipboard.json  draganddrop.json  event.json  fontscale.json  fullscreen.json  height.json  init(width:height:title:hidden:).json  makecurrent(_:).json  modify(ui:uistate:context:).json  pollevents().json  runloop(swapinterval:_:).json  setcallbacks(uistate:uievent:uilayout:).json  swapinterval.json  time.json  title.json  videomode-swift.struct.json  videomode-swift.type.property.json  width.json
docs/data/documentation/mujoco/mj2darray/: count.json  subscript(_:_:).json
docs/data/documentation/mujoco/mjarray/: +(_:_:)-4ikkk.json  +(_:_:)-6u08u.json  count.json  expressiblebyarrayliteral-implementations.json  init(_:).json  init(arrayliteral:).json  mjdoublebufferpointer-implementations.json  mjdoublemutablebufferpointer-implementations.json  mjfloatbufferpointer-implementations.json  mjfloatmutablebufferpointer-implementations.json  mjint32bufferpointer-implementations.json  mjint32mutablebufferpointer-implementations.json  mjuint8bufferpointer-implementations.json  mjuint8mutablebufferpointer-implementations.json  subscript(_:)-10etw.json  subscript(_:)-3szks.json  subscript(_:)-5jw88.json  subscript(_:)-5oc8m.json  subscript(_:)-60kjt.json  subscript(_:)-85ym4.json  subscript(_:)-9qaq3.json  tuple(_:)-5gtg4.json  tuple(_:)-806oj.json  tuple(_:)-8c5f.json  tuple(_:)-8pk9j.json  tuple(_:)-9vvs8.json  withunsafebufferpointer(_:)-1xx3y.json  withunsafebufferpointer(_:)-3l2mq.json  withunsafebufferpointer(_:)-48gab.json  withunsafebufferpointer(_:)-4s336.json  withunsafemutablebufferpointer(_:)-1s3xc.json  withunsafemutablebufferpointer(_:)-87mb4.json  withunsafemutablebufferpointer(_:)-9j6h7.json  withunsafemutablebufferpointer(_:)-9nold.json  zero().json
docs/data/documentation/mujoco/mjcb/: actbias.json  actdyn.json  actgain.json  contactfilter.json  control.json  passive.json  sensor.json  time.json
docs/data/documentation/mujoco/mjcontact/: ctype.json  custommirror.json  customreflectable-implementations.json  dim.json  dist.json  efcaddress.json  exclude.json  frame.json  friction.json  geom1.json  geom2.json  h.json  includemargin.json  init().json  mjobject-implementations.json  mu.json  pos.json  solimp.json  solref.json  withctypeunsafemutablepointer(to:_:).json
docs/data/documentation/mujoco/mjdata/: act.json  actdot.json  actuatorforce.json  actuatorlength.json  actuatormoment.json  actuatorvelocity.json  cacc.json  camxmat.json  camxpos.json  cdof.json  cdofdot.json  cfrcext.json  cfrcint.json  cinert.json  contact.json  copied(model:).json  copy(from:model:).json  crb.json  ctrl.json  ctype.json  custommirror.json  customreflectable-implementations.json  cvel.json  dcolind.json  drowadr.json  drownnz.json  efcar.json  efcarcolind.json  efcaref.json  efcarrowadr.json  efcarrownnz.json  efcb.json  efcd.json  efcdiagapprox.json  efcforce.json  efcfrictionloss.json  efcid.json  efcj.json  efcjcolind.json  efcjrowadr.json  (+94 more)
docs/data/documentation/mujoco/mjdatastorage/: na.json  nbody.json  ncam.json  nconmax.json  nd.json  ngeom.json  njmax.json  njnt.json  (+12 more)
docs/index/: availability.index  data.mdb  navigator.index
scripts/: docc.sh
scripts/vscode/: build.sh
(+1807 files in other folders)
