load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "swift-mujoco",
    srcs = ["//Sources"],
    module_name = "MuJoCo",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources:CShim",
        "//Sources:C_glfw",
        "@mujoco//:C_mujoco",
    ],
)
