load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library", "swift_interop_hint")

swift_library(
    name = "ChangeCases",
    srcs = ["codegen/changeCases.swift"],
    module_name = "ChangeCases",
)

swift_library(
    name = "MuJoCoCSyntax",
    srcs = [
        "codegen/enumDecl.swift",
        "codegen/functionExtension.swift",
        "codegen/parseHeaders.swift",
        "codegen/structExtension.swift",
    ],
    module_name = "MuJoCoCSyntax",
    deps = [
        ":ChangeCases",
    ],
)

swift_binary(
    name = "codegen",
    srcs = ["codegen/main.swift"],
    deps = [
        ":MuJoCoCSyntax",
    ],
)

cc_library(
    name = "C_glfw",
    hdrs = ["C_glfw/glfw.h"],
    linkopts = ["-lglfw"],
    tags = ["swift_module=C_glfw"],
    visibility = ["//:__pkg__"],
    deps = [],
    aspect_hints = [":C_glfw_swift_interop"],
)

swift_interop_hint(
    name = "C_glfw_swift_interop",
    module_name = "C_glfw",
)

cc_library(
    name = "CShim",
    srcs = ["CShim/CShim.c"],
    hdrs = ["CShim/CShim.h"],
    tags = ["swift_module=CShim_mujoco"],
    visibility = ["//:__pkg__"],
    deps = [
        "@mujoco//:C_mujoco",
    ],
    aspect_hints = [":CShim_mujoco_swift_interop"],
)

swift_interop_hint(
    name = "CShim_mujoco_swift_interop",
    module_name = "CShim_mujoco",
)

filegroup(
    name = "Sources",
    srcs = glob(["*.swift"]),
    visibility = ["//:__pkg__"],
)
